@@ -1401,7 +1401,7 @@
 								<font>font27</font>
 								<shadowcolor>text_shadow</shadowcolor>
 								<height>35</height>
-								<width min="1" max="602">auto</width>
+								<width min="1" max="555">auto</width>
 								<scroll>true</scroll>
 							</control>
 						</control>
